  MpiCollectiveBegin, MpiCollectiveEnd events to the `scorep-score`
  estimate calculation.
- Fix remapping specifications for HIP applications.
- Fix paradigm assignment to group definitions for Kokkos and HIP in
  tracing mode.
- The instrumenter now identifies the file suffixes `.cuf` and `.CUF`
  as CUDA Fortran files.
- Avoid creating group/communicator/window definitions with no members
  and no global paradigm group. This affects the CUDA adapter.

------------------- Released version 8.4 -----------------------------

User tools and API improvements and changes:

- Fixed assignment of functions to the `COM` category in Score-P's scoring tool.
  User wrapped libraries now do induce `COM` along call paths that reach them,
  and Score-P internal regions such as `TRACE BUFFER FLUSH` no longer induce
  `COM`.

Compatibility:

- The classic Intel compilers will now use the flag `-diag-disable=10441`
  to suppress the deprecation warning for each compilation unit.

Bugfixes:

- Fix crash when issuing multiple consecutive split collective IO operations
  on the same file handle.
- Fix linking issues with LLVM based compilers when OpenMP target flags
  are used and the compiler instrumentation is active.
- HIP instrumentation is now consistent with CUDA instrumentation in its
  handling of small rounding errors in device timestamp interpolation and
  will simply adjust the beginning of the next event per stream according
  to the events already seen.
- Fix incorrect communicator attribute in MPI_COLLECTIVE_END events for
  `MPI_Comm_create_group`, `MPI_Comm_create_from_group`, `MPI_Comm_join`,
  `MPI_Intercomm_create`, and `MPI_Intercomm_create_from_groups`.
- Fix generation of 'MpiRequestTested' events from `MPI_Test[all|any|some]`
  wrappers for unsuccessful tests when enabled via
  `SCOREP_MPI_ENABLE_GROUPS=xreqtest`.
- The configure check for `pthread_spin_init` now uses the correct
  data types for the arguments.